--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -32,19 +32,13 @@ body {
 	border-radius: 5px;
 	text-shadow: 1px 1px 1px #037716;
 }
-.loader {
-	position: fixed;
-	left: 0px;
-	top: 0px;
-	width: 100%;
-	height: 100%;
-	z-index: 9999;
-	background: url("../img/medium.gif") 50% 50% no-repeat rgb(249, 249, 249);
-	opacity: 0.9;
-}
-/* .activator img {
-  border-radius: 25%;
-} */
+
 .tabs .indicator {
 	background-color: rgb(23, 3, 70); /*your color*/
+}
+
+.responsive-img
+{
+	max-width: 100%;
+	height: auto;
 }
